--- a/css/footer.css
+++ b/css/footer.css
@@ -25,6 +25,23 @@ footer {
   font-weight: bold;
   transform: scale(0.8);
 }
+@keyframes icons-둥둥 {
+  0% {
+    transform: translateY(0px);
+  }
+  30% {
+    transform: translateY(-10px);
+  }
+  70% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 .footer-icons__img {
   width: 30px;
+}
+.footer-icons:hover {
+  animation: 2s icons-둥둥;
 }
