--- a/css/main.css
+++ b/css/main.css
@@ -49,4 +49,9 @@ main {
   bottom: 120px;
   right: 29px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+.write-btn:hover {
+  background-color: rgba(254, 111, 15, 0, 0.3);
 }
